--- a/index.html
+++ b/index.html
@@ -5,14 +5,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cambo|Poppins">
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Megan Moroney</title>
 </head>
 <body>
-    <h2>Megan Moroney</h2>
-    <p>This is Megan Moroney's website</p>
-<footer>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">MM</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu" aria-controls="Menu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="Menu">
+                <ul class="navbar-nav"> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">Music</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Tour</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Store</a>
+                  </li>
+                </ul>
+                <span class = "navbar-text ml-auto">
+                  <button type="button" class="btn btn-light" data-toggle="modal" data-target="#newsletterModal">
+                    SIGN UP
+                  </button>
+                </span>
+              </div>
+            </div>
+          </nav>
+          <div class="modal fade" id="newsletterModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Get updates from Megan</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p> Join the list to be the first to hear about new music, tour dates, merch, and more!</p>
+                  <div class="container-fluid">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-8 justify-content-left">
+                                <label class="sr-only" for="signupEmail">Email address</label>
+                                <input type="email" class="form-control" id="signupEmail" placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-4">
+                              <button type="submit" class="btn btn-outline-danger btn-block">Join</button>
+                            </div>
+                        </div>
 
-</footer>
+                    </form>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
+    </header>
+    <div>
+        <h2>Megan Moroney</h2>
+        <p>This is Megan Moroney's website</p>
+    </div>
+    <footer>
+
+    </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
