Main Name and Image

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
               <div class="collapse navbar-collapse" id="Menu">
                 <ul class="navbar-nav"> 
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link active" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">Music</a>
+                    <a class="nav-link" href="#">Music</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Tour</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Store</a>
+                    <a class="nav-link" href="https://www.meganmoroneystore.com/s/shop" target="_blank">Store</a>
                   </li>
                 </ul>
                 <span class = "navbar-text ml-auto">
@@ -71,10 +71,17 @@
             </div>
           </div>
     </header>
-    <div>
-        <h2>Megan Moroney</h2>
-        <p>This is Megan Moroney's website</p>
+<!-- Large Name -->
+    <div class="row">
+        <h2 id="mainName"class="col text-center">Megan Moroney</h2>
     </div>
+    <!-- Top of Page IMG -->
+    <div class="row">
+      <img src="img/MMMain.png" class="img-fluid col col-5 mx-auto" alt="Headshot of Megan Moroney">
+    </div>
+
+
+    
     <footer>
 
     </footer>
