--- a/index.html
+++ b/index.html
@@ -73,15 +73,70 @@
     </header>
 <!-- Large Name -->
     <div class="row">
-        <h2 id="mainName"class="col text-center">Megan Moroney</h2>
+        <h2 id="mainName"class="col text-center mx-auto display-3 text-nowrap">Megan Moroney</h2>
     </div>
     <!-- Top of Page IMG -->
     <div class="row">
       <img src="img/MMMain.png" class="img-fluid col col-5 mx-auto" alt="Headshot of Megan Moroney">
     </div>
+<!-- Music Title -->
+  <div class="row row-content">
+    <div class="col col-sm-2" id="pageTitle">
+      <p class="col col-sm-2 text-sm-left text-xs-center"> Music</p>
+    </div>
+  </div>
+<!-- Music Carousel -->
+<div class="container">
+  <div class="row row-content">
+      <div class="col-md-6">  
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="img/EP.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/TNOrange.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/MMBlue.png" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <!-- Music Card -->
+      <div class="col-md-5">
+        <div class="card">
+          <h3 class="card-header text-black">Out Now</h3>
+          <div class="card-body">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">EP: Pistol Made of Roses</li>
+              <li class="list-group-item">Single: Tennessee Orange</li>
+              <li class="list-group-item">Single: Hair Salon</li>
+            </ul>
+            <div class=""><a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger mx-auto">Buy/Steam</a></div>
+
+              </dl>
+          </div>
+      </div>
+      </div>
+    </div>
+  </div>
 
 
-    
+
     <footer>
 
     </footer>
