--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <a class="nav-link active" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Music</a>
+                    <a class="nav-link" href="#musicSection">Music</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Tour</a>
+                    <a class="nav-link" href="#tourSection">Tour</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="https://www.meganmoroneystore.com/s/shop" target="_blank">Store</a>
@@ -80,7 +80,7 @@
       <img src="img/MMMain.png" class="img-fluid col col-5 mx-auto" alt="Headshot of Megan Moroney">
     </div>
 <!-- Music Title -->
-  <div class="row row-content">
+  <div class="row row-content" id="musicSection">
     <div class="col col-sm-2" id="pageTitle">
       <p class="col col-sm-2 text-sm-left text-xs-center"> Music</p>
     </div>
@@ -119,26 +119,99 @@
       <!-- Music Card -->
       <div class="col-md-5">
         <div class="card">
-          <h3 class="card-header text-black">Out Now</h3>
+          <h3 class="card-header text-center text-black">Out Now</h3>
           <div class="card-body">
             <ul class="list-group list-group-flush">
               <li class="list-group-item">EP: Pistol Made of Roses</li>
               <li class="list-group-item">Single: Tennessee Orange</li>
               <li class="list-group-item">Single: Hair Salon</li>
             </ul>
-            <div class=""><a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger mx-auto">Buy/Steam</a></div>
-
-              </dl>
+            <div class="text-center"><a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger mx-auto">Buy/Steam Now</a></div>
           </div>
       </div>
       </div>
     </div>
   </div>
 
+  <!-- Tour Title -->
+  <div class="row row-content" id="tourSection">
+    <div class="col col-sm-2" id="pageTitle">
+      <p class="col col-sm-2 text-sm-left text-xs-center text-nowrap" > Tour Dates</p>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row row-content">
+      <div class="col">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <div class="row row-content" id="tourDateInfo">
+              <div class="col-12 col-sm-10 align-text-middle">Oct. 21 - Cherokee Casino - West Siloam Springs, OK</div> 
+              <div class="col-12 col-sm-2 text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+              </a></div>
+            </div>
+            </li>
+              <li class="list-group-item">
+                <div class="row row-content">
+                  <div class="col-12 col-sm-10 align-text-middle">Oct. 22 - Arkansas State Fair - Little Rock, AR</div> 
+                  <div class="col-12 col-sm text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+                  </a></div></div></li>
+                  <li class="list-group-item">
+                    <div class="row row-content">
+                      <div class="col-12 col-sm-10 align-text-middle">Oct. 26 - Lexington Opera House - Lexington, KY</div> 
+                      <div class="col-12 col-sm text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+                      </a></div></div></li>
+                      <li class="list-group-item">
+                        <div class="row row-content">
+                          <div class="col-12 col-sm-10 align-text-middle">Nov. 11 - Varisty Theater - Minneapolis, MN</div> 
+                          <div class="col-12 col-sm text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+                          </a></div></div></li>
+                          <li class="list-group-item">
+                            <div class="row row-content">
+                              <div class="col-12 col-sm-10 align-text-middle">Nov. 12 - Majestic Theatre - Madison, WI</div> 
+                              <div class="col-12 col-sm text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+                              </a></div></div></li>
+                              <li class="list-group-item">
+                                <div class="row row-content">
+                                  <div class="col-12 col-sm-10 align-text-middle">Nov. 13 - Deluxe - Indianapolis, IN</div> 
+                                  <div class="col-12 col-sm text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+                                  </a></div></div></li>
+                                  <li class="list-group-item">
+                                    <div class="row row-content">
+                                      <div class="col-12 col-sm-10 align-text-middle">Nov. 16 - Brooklyn Bowl - Nashville, TN</div> 
+                                      <div class="col-12 col-sm text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+                                      </a></div></div></li>
+                                      <li class="list-group-item">
+                                        <div class="row row-content">
+                                          <div class="col-12 col-sm-10 align-text-middle">Nov. 17 - Georgia Theater- Athens, GA</div> 
+                                          <div class="col-12 col-sm text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+                                          </a></div></div></li>
+                                          <li class="list-group-item">
+                                            <div class="row row-content">
+                                              <div class="col-12 col-sm-10 align-text-middle">Nov. 18 - Iron City - Birmingham, AL</div> 
+                                              <div class="col-12 col-sm text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+                                              </a></div></div></li>
+                                              <li class="list-group-item">
+                                                <div class="row row-content">
+                                                  <div class="col-12 col-sm-10 align-text-middle">Nov. 19 - Mars Music Hall - Huntsville, AL</div> 
+                                                  <div class="col-12 col-sm text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+                                                  </a></div></div></li>
+                                                  <li class="list-group-item">
+                                                    <div class="row row-content">
+                                                      <div class="col-12 col-sm-10 align-text-middle">Dec. 15 - Warehouse Live - Houston, TX</div> 
+                                                      <div class="col-12 col-sm text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+                                                      </a></div></div></li>
+                                                      <li class="list-group-item">
+                                                        <div class="row row-content">
+                                                          <div class="col-12 col-sm-10 align-text-middle">Dec. 16 - The Studio at the Factory - Dallas, TX</div> 
+                                                          <div class="col-12 col-sm text-right"> <a href="https://strm.to/OffTheDeepEndWE" target="_blank" class="btn btn-danger btn-block mx-auto">Tickets
+                                                          </a></div></div></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
 
     <footer>
-
     </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
